--- a/src/app/components/usuario-list/usuario-list.component.html
+++ b/src/app/components/usuario-list/usuario-list.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-4">
 
     <div class="d-flex justify-content-between align-items-center mb-3">
-        <h2>Tareas</h2>
+        <h2>Usuario</h2>
         <button pButton type="button" label="Nuevo Usuario" icon="pi pi-plus" class="btn btn-primary" ></button>
     </div>
 
