--- a/src/app/components/tarea-list/tarea-list.component.html
+++ b/src/app/components/tarea-list/tarea-list.component.html
@@ -2,7 +2,7 @@
 
     <div class="d-flex justify-content-between align-items-center mb-3">
         <h2>Tareas</h2>
-        <button pButton type="button" label="Nueva Tarea" icon="pi pi-plus" class="btn btn-primary" ></button>
+        <button (click)="OpenDialog()" pButton type="button" label="Nueva Tarea" icon="pi pi-plus" class="btn btn-primary" ></button>
     </div>
 
 <div class="table-responsive">
@@ -43,16 +43,16 @@
 <form [formGroup]="tareaForm">
 <div class="mb-3">
     <label for="tarea" class="form-label">Descripcion</label>
-    <input id="tarea" pInputText formControlName="tarea" class="form-formControl">
+    <input id="tarea" pInputText formControlName="tarea" class="form-control">
 </div>
 
 <div class="mb-3">
     <label for="descripcion" class="form-label">Descripcion</label>
-    <input id="descripcion" pInputText formControlName="descripcion" class="form-formControl">
+    <input id="descripcion" pInputText formControlName="descripcion" class="form-control">
 </div>
 
 <div class="mb-3">
-    <label for="usuario" class="form-label">Usuario</label>
+    <label for="usuario" class="form-label me-2">Usuario</label>
     <p-dropdown
     id="usuario"
     [options]="usuarios"
@@ -64,7 +64,7 @@
 
 <div class="d-flex justify-content-end">
 
-<button pButton type="button" label="Cancelar" class="btn btn-secondary me-2"></button>
+<button (click)="displayDialog=false" pButton type="button" label="Cancelar" class="btn btn-secondary me-2"></button>
 <button pButton type="button" label="Guardar" class="btn btn-primary"></button>
 
 </div>
